[tool.poetry]
name = "pytorch_toolbox"
version = "0.0.0"
description = ""
authors = ["Qian Yu <qianyu.bayarea@gmail.com>"]
packages = [{include = "torch_lib"}]


[tool.poetry.dependencies]
python = "^3.8,<3.12"
torch = "^2.0.1"
torchvision = "^0.15.2"
numpy = "^1.24.3"
pandas = "^2.0.2"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.5.0"
Sphinx = "^5.3.0"
nbsphinx = "^0.8.9"
pypandoc = "^1.9"
sphinx-rtd-theme = "^1.0.0"
ipython = "^8.5.0"
notebook = "^6.5.1"
black = "^22.10.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
